--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,4 @@
-REACT_APP_BASE_URL='http://api.com'
+REACT_APP_BASE_URL='http://localhost:3000/api'
 PORT=8086
 BROWSER=none
+REACT_APP_SERVER_PORT=3000
