--- a/package.json
+++ b/package.json
@@ -8,10 +8,16 @@
     "axios": "^0.19.2",
     "css-loader": "^2.1.1",
     "dotenv-cli": "^3.1.0",
+    "jsonwebtoken": "^8.5.1",
+    "koa": "^2.12.0",
+    "koa-body": "^4.1.3",
+    "koa-bodyparser": "^4.3.0",
+    "koa-router": "^8.0.8",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "mockjs": "^1.1.0",
     "node-waves": "^0.7.6",
+    "nodemon": "^2.0.4",
     "prop-types": "^15.7.2",
     "ramda": "^0.27.0",
     "react": "^16.13.1",
@@ -23,6 +29,7 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "style-loader": "^1.1.3",
+    "ts-node": "^8.10.1",
     "typescript": "~3.7.2"
   },
   "devDependencies": {
@@ -33,8 +40,14 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/koa": "^2.11.3",
+    "@types/koa-bodyparser": "^4.3.0",
+    "@types/koa-jwt": "^3.3.0",
+    "@types/koa-log4": "^2.3.2",
+    "@types/koa-router": "^7.4.1",
     "@types/mockjs": "^1.0.2",
-    "@types/node": "^12.0.0",
+    "@types/node": "^14.0.5",
     "@types/node-waves": "^0.7.6",
     "@types/ramda": "^0.27.3",
     "@types/react": "^16.9.0",
@@ -43,6 +56,7 @@
     "@types/react-router-dom": "^5.1.3",
     "@types/redux": "^3.6.0",
     "@types/redux-devtools-extension": "^2.13.2",
+    "@types/validator": "^13.0.0",
     "@types/webpack-env": "^1.15.1",
     "@typescript-eslint/eslint-plugin": "^2.27.0",
     "@typescript-eslint/parser": "^2.27.0",
@@ -60,6 +74,7 @@
   },
   "scripts": {
     "start": "dotenv -e .env.development react-app-rewired start",
+    "server": "dotenv -e .env.development nodemon src/mock/server.ts",
     "build:prod": "dotenv -e .env.production react-app-rewired build",
     "build:test": "dotenv -e .env.test react-app-rewired build",
     "test": "jest",
