--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@ant-design/icons": "^4.1.0",
     "antd": "^4.2.0",
     "axios": "^0.19.2",
+    "classnames": "^2.2.6",
     "css-loader": "^2.1.1",
     "dotenv-cli": "^3.1.0",
     "jsonwebtoken": "^8.5.1",
@@ -30,7 +31,8 @@
     "redux-devtools-extension": "^2.13.8",
     "style-loader": "^1.1.3",
     "ts-node": "^8.10.1",
-    "typescript": "~3.7.2"
+    "typescript": "~3.7.2",
+    "use-merge-value": "^1.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.6",
@@ -39,6 +41,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/classnames": "^2.2.10",
     "@types/jest": "^24.0.0",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/koa": "^2.11.3",
