--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,5 @@
-REACT_APP_BASE_URL='http://localhost:3000/api'
+REACT_APP_BASE_URL='/api'
+REACT_APP_API_BASE_URL='http://www.gmm.sdo.com'
 PORT=8086
 BROWSER=none
 REACT_APP_SERVER_PORT=3000
