--- a/package.json
+++ b/package.json
@@ -9,16 +9,10 @@
     "classnames": "^2.2.6",
     "css-loader": "^2.1.1",
     "dotenv-cli": "^3.1.0",
-    "jsonwebtoken": "^8.5.1",
-    "koa": "^2.12.0",
-    "koa-body": "^4.1.3",
-    "koa-bodyparser": "^4.3.0",
-    "koa-router": "^8.0.8",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "mockjs": "^1.1.0",
     "node-waves": "^0.7.6",
-    "nodemon": "^2.0.4",
     "prop-types": "^15.7.2",
     "ramda": "^0.27.0",
     "react": "^16.13.1",
@@ -30,7 +24,6 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "style-loader": "^1.1.3",
-    "ts-node": "^8.10.1",
     "typescript": "~3.7.2",
     "use-merge-value": "^1.0.1"
   },
@@ -42,13 +35,8 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/classnames": "^2.2.10",
+    "@types/http-proxy-middleware": "^0.19.3",
     "@types/jest": "^24.0.0",
-    "@types/jsonwebtoken": "^8.5.0",
-    "@types/koa": "^2.11.3",
-    "@types/koa-bodyparser": "^4.3.0",
-    "@types/koa-jwt": "^3.3.0",
-    "@types/koa-log4": "^2.3.2",
-    "@types/koa-router": "^7.4.1",
     "@types/mockjs": "^1.0.2",
     "@types/node": "^14.0.5",
     "@types/node-waves": "^0.7.6",
@@ -59,7 +47,6 @@
     "@types/react-router-dom": "^5.1.3",
     "@types/redux": "^3.6.0",
     "@types/redux-devtools-extension": "^2.13.2",
-    "@types/validator": "^13.0.0",
     "@types/webpack-env": "^1.15.1",
     "@typescript-eslint/eslint-plugin": "^2.27.0",
     "@typescript-eslint/parser": "^2.27.0",
@@ -72,12 +59,12 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^3.0.0",
+    "http-proxy-middleware": "^1.0.4",
     "react-app-rewired": "^2.1.5",
     "ts-jest": "^25.5.1"
   },
   "scripts": {
     "start": "dotenv -e .env.development react-app-rewired start",
-    "server": "dotenv -e .env.development nodemon src/mock/server.ts",
     "build:prod": "dotenv -e .env.production react-app-rewired build",
     "build:test": "dotenv -e .env.test react-app-rewired build",
     "test": "jest",
