--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ramda": "^0.27.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-highlight-words": "^0.16.0",
     "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
@@ -43,6 +44,7 @@
     "@types/ramda": "^0.27.3",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-highlight-words": "^0.16.1",
     "@types/react-redux": "^7.1.8",
     "@types/react-router-dom": "^5.1.3",
     "@types/redux": "^3.6.0",
