--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "node-waves": "^0.7.6",
     "prop-types": "^15.7.2",
     "ramda": "^0.27.0",
+    "rc-field-form": "^1.4.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-highlight-words": "^0.16.0",
