--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "prop-types": "^15.7.2",
     "ramda": "^0.27.0",
     "rc-field-form": "^1.4.4",
+    "rc-tree": "^3.5.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-highlight-words": "^0.16.0",
@@ -43,6 +44,7 @@
     "@types/node": "^14.0.5",
     "@types/node-waves": "^0.7.6",
     "@types/ramda": "^0.27.3",
+    "@types/rc-tree": "^1.11.3",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-highlight-words": "^0.16.1",
