--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.1.0",
+    "@antv/g2": "^4.0.12",
     "antd": "^4.2.0",
     "axios": "^0.19.2",
+    "bizcharts": "^4.0.7",
     "classnames": "^2.2.6",
     "css-loader": "^2.1.1",
     "dotenv-cli": "^3.1.0",
@@ -43,7 +45,7 @@
     "@types/mockjs": "^1.0.2",
     "@types/node": "^14.0.5",
     "@types/node-waves": "^0.7.6",
-    "@types/ramda": "^0.27.3",
+    "@types/ramda": "^0.27.7",
     "@types/rc-tree": "^1.11.3",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
