--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "dependencies": {
     "@ant-design/icons": "^4.1.0",
     "@antv/g2": "^4.0.12",
+    "@uiw/react-codemirror": "^2.2.1",
     "antd": "^4.2.0",
     "axios": "^0.19.2",
     "bizcharts": "^4.0.7",
     "classnames": "^2.2.6",
+    "codemirror": "^5.55.0",
     "css-loader": "^2.1.1",
     "dotenv-cli": "^3.1.0",
+    "highlight.js": "^10.1.1",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "mockjs": "^1.1.0",
@@ -22,12 +25,14 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-highlight-words": "^0.16.0",
+    "react-markdown": "^4.3.1",
     "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
+    "remark-toc": "^7.0.0",
     "style-loader": "^1.1.3",
     "typescript": "~3.7.2",
     "use-merge-value": "^1.0.1"
@@ -40,6 +45,8 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/classnames": "^2.2.10",
+    "@types/codemirror": "^0.0.97",
+    "@types/highlight.js": "^9.12.4",
     "@types/http-proxy-middleware": "^0.19.3",
     "@types/jest": "^24.0.0",
     "@types/mockjs": "^1.0.2",
@@ -67,6 +74,7 @@
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^3.0.0",
     "http-proxy-middleware": "^1.0.4",
+    "raw-loader": "^4.0.1",
     "react-app-rewired": "^2.1.5",
     "ts-jest": "^25.5.1"
   },
