--- a/.travis.yml
+++ b/.travis.yml
@@ -5,21 +5,21 @@ services:
 - docker
 addons:
   ssh_known_hosts:
-    - 118.190.140.52
+  - 118.190.140.52
 cache:
   directories:
-    - node_modules
+  - node_modules
 before_install:
 - openssl aes-256-cbc -K $encrypted_04674a2f3de9_key -iv $encrypted_04674a2f3de9_iv
-  -in id_rsa.enc -out ~/.ssh/id_rsa -d
+  -in id_rsa.enc -out ~\/.ssh/id_rsa -d
 - eval "$(ssh-agent -s)"
 - chmod 600 ~/.ssh/id_rsa
 - ssh-add ~/.ssh/id_rsa
 install:
-  - yarn install
+- yarn install
 after_success:
-  - chmod 600 ~/.ssh/id_rsa
-  - ssh travis@118.190.140.52 -o StrictHostKeyChecking=no 'cd ~/dashboard && sh ./update.sh'
+- chmod 600 ~/.ssh/id_rsa
+- ssh travis@118.190.140.52 -o StrictHostKeyChecking=no 'cd ~/dashboard && sh ./update.sh'
 script:
 - npm run build:prod
 - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
